src/test/ui/error-codes/E0164.stderr
error[E0164]: expected tuple struct/variant, found associated constant `<Foo>::B`
  --> $DIR/E0164.rs:20:9
   |
LL |         Foo::B(i) => i, //~ ERROR E0164
   |         ^^^^^^^^^ not a tuple variant or struct

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0164"
